--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "angular": "^1.5.0",
     "nCore": "*",
     "angular-foundation": "*",
-    "foundation": "*",
     "ngstorage": "~0.3.0",
     "angular-sanitize": "^1.5.0",
     "angular-animate": "^1.5.0",
@@ -15,7 +14,9 @@
     "angular-busy": "^4.1.0",
     "angulartics": "~1.0.0",
     "angulartics-google-analytics": "~0.1.4",
-    "angularfire": "^2.1.0"
+    "angularfire": "^2.1.0",
+    "foundation-sites": "^6.2.4",
+    "bourbon": "^4.2.7"
   },
   "appPath": "app/",
   "resolutions": {
